# LabCompass

./: .gitignore  CMakeLists.txt  LICENSE.md  LabCompass.pro  README.md  clientutils.py  connect.py  content-locations.json  lab-notes.json  labanalyzer.py  labmap.py  labmapmodel.py  labnoteupdater.py  logwatcher.py  main.py  main.qml  options.py  package.py  package.spec  requirements.txt  section-presets.json  versionchecker.py
app/: CMakeLists.txt  app.pro
app/resources/: app.qrc  labcompass.qrc
app/resources/ui/: CircleProgressBar.qml  Compass.qml  DragMoveArea.qml  Dummy.qml  Global.qml  GlobalAccessor.qml  NotificationIndicator.qml  Options.qml  Puzzle.qml  RoomContentIcon.qml  RoomContentView.qml  StandardAnimation.qml  SvgImage.qml  TabLabel.qml  TextHighlightTab.qml  Toolbar.qml  ToolbarButton.qml  TooltipHoverArea.qml
app/src/: application.cpp  application.h  main.cpp  stdafx.h
app/src/hotkey/: hotkeybinding.cpp  hotkeybinding.h
app/src/keysequence/: keysequencehelper.cpp  keysequencehelper.h
app/src/tray/: trayiconmenu.cpp  trayiconmenu.h
app/src/util/: setupdebugoutput.cpp  setupdebugoutput.h
app/src/window/: compasstoolbarwindow.cpp  compasstoolbarwindow.h  compasswindow.cpp  compasswindow.h  headerwindow.cpp  headerwindow.h  instructionlistwindow.cpp  instructionlistwindow.h  optionswindow.cpp  optionswindow.h  plannerwindow.cpp  plannerwindow.h  puzzlewindow.cpp  puzzlewindow.h  roompresetswindow.cpp  roompresetswindow.h  toolbarwindow.cpp  toolbarwindow.h  window.cpp  window.h
common/: CMakeLists.txt  common.pro
common/resources/: common.qrc  labcompass.qrc  map.schema.json  room-presets-legacy.json  room-presets.json  room-presets.schema.json
common/resources/ui/: Compass.qml  Global.qml  Header.qml  HighlightTab.qml  MaterialInk.qml  SvgImage.qml  WindowWithShadow.qml  point.js  rect.js
common/src/: application.cpp  global.h  settings.cpp  settings.h  stdafx.h  version.h
common/src/controller/: labyrinthcontroller.cpp  labyrinthcontroller.h  navigationcontroller.cpp  navigationcontroller.h
common/src/helper/: directionnormalizer.cpp  directionnormalizer.h  roompresethelper.cpp  roompresethelper.h
logsimulator/: CMakeLists.txt  logsimulator.pro
logsimulator/resources/: widget.ui
logsimulator/src/: application.cpp  application.h  main.cpp  widget.cpp  widget.h  widget.ui
qml/: Compass.qml  (+14 more)
test/: CMakeLists.txt  test.pro
test/data/: 2018-01-09_merciless.json  2018-01-09_normal.json  2018-01-09_uber.json  2018-01-10_cruel.json  2018-01-10_merciless.json  2018-01-10_normal.json  2018-01-10_uber.json
test/src/: main.cpp  testdataavailabletest.cpp
(+118 files in other folders)
